[tool.poetry]
name = "pytest-xstress"
version = "1.0.1"
description = ""
authors = ["Yuvalino <yuvalino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.0.0"
pytest-xdist = "^3.6.1"

[tool.poetry.group.dev.dependencies]
flask = "^3.0.3"
werkzeug = "^3.0.3"
pre-commit = "^3.5"
pytest-publish = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
pytest11 = { xstress = "pytest_xstress"}

[tool.pytest.ini_options]
filterwarnings = ["ignore::_pytest.warning_types.PytestUnknownMarkWarning"]

[tool.ruff]
line-length = 88
# pyflakes, pycodestyle, isort
lint.select = ["F", "E", "W", "I001"]
lint.ignore = ["E203", "E501"]
